vista encuesta publicada lista

--- a/vista_estadisticas.html
+++ b/vista_estadisticas.html
@@ -35,7 +35,7 @@
             <img src="/iconos/encuesta.jpg" alt="" class="imagen__card">
             <p class="estado__card">Total</p>
             <h2 class="titulo__card">450 Encuestas</h2>
-            <p class="parrafo__card">Número total de encuestas creadas.</p>
+            <p class="parrafo__card">Total de encuestas creadas.</p>
             <button class="boton__1" onclick="abrirModal()">Generar PDF</button>
         </div>
 
