ajustando vista perfil - estadisticas

--- a/vista_perfil_estadisticas.html
+++ b/vista_perfil_estadisticas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/vista_estadisticas.css">
+    <link rel="stylesheet" href="/vista_perfil_estadisticas.css">
     <title>Estadísticas</title>
     <script src="menuhamburguesa.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
@@ -26,7 +26,42 @@
 
     <div class="contenedor__inicio">
         <div class="contenedor__encuesta-header">
-            <h1 class="contenedor__inicio-titulo">Estadísticas Generales</h1>
+            <h1 class="contenedor__inicio-titulo">Perfil</h1>
+        </div>
+    </div>
+
+    <div class="contenedor__perfil">
+        <img src="/iconos/perfil.jpg" alt="" class="imagen__perfil">
+        <h3 class="titulo__perfil">Información del Perfil</h3>
+        <p class="perfil__subtitulo">Administrar su información personal y la configuración de su cuenta</p>
+        <div class="editar__perfil">
+            <button class="boton__1">Editar perfil</button>
+            <button class="boton__1">Cambiar Contraseña</button>
+        </div>
+    </div>
+
+    <div class="contenedor__informacion-personal">
+        <h3 class="titulo__informacion-personal">Información Personal</h3>
+        <div class="informacion__personal">
+            <img src="/iconos/perfil.jpg" alt="">
+            <p class="parrafo__informacion-personal">Nombre Completo</p>
+            <p class="nombre">Carlos Rodriguez</p>
+        </div>
+        <div class="informacion__personal">
+            <img src="/iconos/perfil.jpg" alt="">
+            <p class="parrafo__informacion-personal">Correo Electrónico</p>
+            <p class="nombre">correo@correo.com</p>
+        </div>
+        <div class="informacion__personal">
+            <img src="/iconos/perfil.jpg" alt="">
+            <p class="parrafo__informacion-personal">Número de Teléfono</p>
+            <p class="nombre">0424 - 123 45 67</p>
+        </div>
+    </div>
+
+    <div class="contenedor__inicio">
+        <div class="contenedor__encuesta-header">
+            <h1 class="contenedor__inicio-titulo">Mis Estadísticas</h1>
         </div>
     </div>
 
